# Ai_Video_Gen

./: README.md  animation_engine.py  app.py  avatars.py  lip_sync.py  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  tts_engine.py  utils.py  video_processor.py
instance/: database.db
static/css/: custom.css
static/js/: avatar.js  main.js
templates/: base.html  index.html  voice_options.html
