[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "edge-tts>=7.0.0",
    "email-validator>=2.2.0",
    "ffmpeg>=1.4",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "numpy>=2.1.3",
    "psycopg2-binary>=2.9.10",
    "python-ffmpeg>=2.0.12",
    "requests>=2.32.3",
]
